--- a/app/views/leads/_status.html.haml
+++ b/app/views/leads/_status.html.haml
@@ -10,11 +10,11 @@
       %tr
         %td
           .label.top #{t :dealer_type}:
-          = f.select :dealer_type, Lead.dealer_types.keys.map { |key| [key.to_s.humanize, key] }, { selected: @lead.dealer_type }, { style: "width:160px", class: 'select2' }
+          = f.select :dealer_type, Lead.dealer_types.keys.map { |key| [key.to_s.humanize, key] }, { selected: @lead.dealer_type }, { style: "width:160px", class: 'select2 customInputsLeads' }
         %td= spacer
         %td
           .label.top #{t :status}:
-          = f.select :status, lead_status_codes_for(@lead), { selected: (@lead.status || "new").to_sym }, { style: "width:160px", class: 'select2' }
+          = f.select :status, lead_status_codes_for(@lead), { selected: (@lead.status || "new").to_sym }, { style: "width:160px", class: 'select2 customInputsLeads' }
         %td= spacer
         %td
           .label.top #{t :rating}:
@@ -23,17 +23,17 @@
         %td
           .label #{t :source}:
           - if @campaign && !edit # Create a lead from Campaign landing page: select :campaign as a source and disable the dropdown.
-            = f.select :source, Setting.unroll(:lead_source), { selected: :campaign }, { style: "width:160px;", disabled: true, class: 'select2' }
+            = f.select :source, Setting.unroll(:lead_source), { selected: :campaign }, { style: "width:160px;", disabled: true, class: 'select2 customInputsLeads' }
             = hidden_field_tag "lead[source]", "campaign"
           - else
-            = f.select :source, Setting.unroll(:lead_source), { selected: (@lead.source || "other").to_sym }, { style: "width:160px", class: 'select2' }
+            = f.select :source, Setting.unroll(:lead_source), { selected: (@lead.source || "other").to_sym }, { style: "width:160px", class: 'select2 customInputsLeads' }
         %td= spacer
         %td
           .label #{t :campaign}:
           - if @campaign && !edit # Create a lead from Campaign landing page: select current campaign and disable the dropdown.
-            = collection_select :lead, :campaign_id, @campaigns, :id, :name, { selected: @campaign.id }, { style: "width:100%", disabled: true, class: 'select2' }
+            = collection_select :lead, :campaign_id, @campaigns, :id, :name, { selected: @campaign.id }, { style: "width:100%", disabled: true, class: 'select2 customInputsLeads' }
           - else
-            = collection_select :lead, :campaign_id, @campaigns, :id, :name, { selected: @lead.campaign_id, include_blank: t(:select_none) }, { style: "width:100%", onchange: "crm.flip_campaign_permissions(this.value)", class: 'select2' }
+            = collection_select :lead, :campaign_id, @campaigns, :id, :name, { selected: @lead.campaign_id, include_blank: t(:select_none) }, { style: "width:100%", onchange: "crm.flip_campaign_permissions(this.value)", class: 'select2 customInputsLeads' }
         %td= spacer
         %td
           .label.top #{t :assigned_to}:
