--- a/app/views/leads/_web.html.haml
+++ b/app/views/leads/_web.html.haml
@@ -9,23 +9,23 @@
       %tr
         %td
           .label.top #{t :blog}:
-          = f.text_field :blog
+          = f.text_field :blog, class: "customInputsLeads"
         %td= spacer
         %td
           .label.top #{t :twitter}:
-          = f.text_field :twitter
+          = f.text_field :twitter, class: "customInputsLeads"
       %tr
         %td
           .label #{t :linked_in}:
-          = f.text_field :linkedin
+          = f.text_field :linkedin, class: "customInputsLeads"
         %td= spacer
         %td
           .label #{t :facebook}:
-          = f.text_field :facebook
+          = f.text_field :facebook, class: "customInputsLeads"
       %tr
         %td
           .label #{t :skype}:
-          = f.text_field :skype
+          = f.text_field :skype, class: "customInputsLeads"
         %td= spacer
         %td= spacer
 
