--- a/app/views/campaigns/index.html.haml
+++ b/app/views/campaigns/index.html.haml
@@ -1,18 +1,89 @@
 = styles_for :campaign
-
-= render 'entities/title_bar'
-
-.remote#create_campaign{ hidden }
-
-= render 'search'
+-# = render 'search'
 
 .remote#options{ hidden }
-
-.list#campaigns
-  - if @campaigns.any?
-    = render @campaigns
-  - else
-    = render "shared/empty"
+%div CAMPAIGNS
+%div#popupContainer.popup
+  %div.popup-content
+    -# %button#closePopUp.btn.btn-secondary.close-button X
+    .remote#create_campaign{ hidden }
+  
+-# .list#campaigns
+-#   - if @campaigns.any?
+-#     = render @campaigns
+-#   - else
+-#     = render "shared/empty"
+%div.leadsBoxContainer
+  = render 'entities/title_bar'
+  %div.testTOCheck.mt-2
+    %div.flex.mt-2
+      %div.input-with-icon.mar-r
+        %button.newCustomButton{"data-bs-target" => "#exampleModalTwo", "data-bs-toggle" => "modal", type: "button"}
+          %span.button-text Sort
+        %i.fa.fa-user.mar-r-icons-2
+      %div
+        %div.input-with-icon
+          %button.newCustomButton{"data-bs-target" => "#exampleModalThree", "data-bs-toggle" => "modal", type: "button"}
+            12/03/24 - 12/10/24
+          %i.fa.fa-user.mar-r-icons
+    %div.flex.mt-2
+      %div.mar-r
+        %div.input-with-icon
+          %button.newCustomButton{"data-bs-target" => "#exampleModal", "data-bs-toggle" => "modal", type: "button"}
+            Filters
+          %i.fa.fa-user.mar-r-icons-2
+  %table.fs-14.tableBorderLeads.mt-2
+    %thead
+      %tr
+        %th.p-14.theadLeads Campaing Name
+        %th.p-14.theadLeads Assigned To    
+        %th.p-14.theadLeads Budget
+        %th.p-14.theadLeads Leads Count 
+        %th.p-14.theadLeads Revenue  
+        %th.p-14.theadLeads Starts On  
+        %th.p-14.theadLeads Ends On     
+        %th.p-14.theadLeads Target Leads 
+    %tbody
+      - @campaigns.each do |campaign|
+        %tr
+          %td= campaign.name
+          %td= campaign.assigned_to
+          %td= campaign.budget
+          %td= campaign.leads_count
+          %td= campaign.revenue
+          %td= campaign.starts_on # Adjust date format if needed
+          %td= campaign.ends_on # Assuming assigned_to is the lead owner
+          %td= campaign.target_leads
+          %td
+            -# = link_to 'Edit', edit_lead_path(lead) # Adjust link path as needed
+            -# = link_to 'Delete', lead_path(lead), method: :delete, data: { confirm: 'Are you sure?' } 
 
 #paginate= render "shared/paginate_with_per_page"
 #export= render "shared/export"
+
+:javascript 
+  console.log("working")
+ 
+  var collapsePopUpButton = document.getElementById('collapsePopUp');
+  var popupContainer = document.getElementById('popupContainer');
+  var closePopUpButton = document.getElementById('closePopUp');
+  var closePopUpModalButton = document.getElementById('closePopUpModal');
+  var createLead = document.getElementById('create_lead')
+  console.log("closePopUpModalButton", closePopUpModalButton )
+  console.log("createLead", createLead )
+
+  collapsePopUpButton.addEventListener('click', function() {
+    console.log("clicking")
+    popupContainer.classList.toggle('show');
+    console.log("createLead", createLead )
+  });
+
+  closePopUpButton.addEventListener('click', function() {
+    popupContainer.classList.remove('show');
+  });
+
+  closePopUpModalButton.addEventListener('click', function() {
+    var popupContainer = document.getElementById('popupContainer');
+    console.log("clicking")
+    popupContainer.classList.remove('show');
+  });
