--- a/app/views/entities/_title_bar.html.haml
+++ b/app/views/entities/_title_bar.html.haml
@@ -5,9 +5,9 @@
     #buttons
       = view_buttons
     .create_asset#collapsePopUp
-      = link_to_inline("create_#{model_name}".to_sym, send("new_#{model_name}_path"), {text: t("create_#{model_name}".to_sym), class: 'btn-sm btn-primary'})
+      = link_to_inline("create_#{model_name}".to_sym, send("new_#{model_name}_path"), {text: t("create_#{model_name}".to_sym), class: 'btn-sm btn btn-outline-primary'})
   %div
-    %input.heightInputsCustom
+    %input.heightInputsCustom.newCustomButton{ placeholder: "Search Lead" }
 -# .title
 -#   %span{id: "create_#{model_name}_title"} #{t controller_name.to_sym}
 -#   = image_tag("loading.gif", size: :thumb, id: "loading", style: "display: none;")
