--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -15,8 +15,8 @@
     - if current_user
       -# This span gets updated on the fly if user changes her name.
       %div.mar-r
-        %div.mar-r.iconOrangeCircle
-          %div icon
+        %div.mar-r.iconOrangeCircle.font-icon-color
+          %i.fa.fa-user
       %div.mt-2
         %strong#welcome_username= current_user.name
   %ul.tabs.mt-2
