--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -111,7 +111,8 @@ $sidebar_width: 210px;
   font-size: 0.9em;
   padding-top: 1rem;
   background-color: #fff;
-  border-right: 1px solid;
+  box-shadow: 0 4px 19.8px rgba(0, 0, 0, 0.25);
+  z-index: 1;
   }
 
 .form {
@@ -835,9 +836,10 @@ table.asset_attributes {
   background-color: rgb(255, 255, 255);
   box-shadow: 2px 2px 20.1px rgba(0, 0, 0, 0.5);
   width: 99%;
-  height: 500px;
+  height: auto;
   border-radius: 10px;
   padding: 10px;
+  padding-bottom: 50px;
 }
 
 .mar-r{
