--- a/app/views/leads/_new.html.haml
+++ b/app/views/leads/_new.html.haml
@@ -21,5 +21,5 @@
     - else
       = f.submit t(:create_lead), class: 'btn btn-primary'
     #{t :or}
-    = link_to_cancel new_lead_path, id: 'closePopUpModal'
-
+    %div#closePopUp
+      = link_to_cancel new_lead_path
