--- a/app/views/leads/_edit.html.haml
+++ b/app/views/leads/_edit.html.haml
@@ -1,5 +1,5 @@
 .remote
-  = simple_form_for(@lead, html: one_submit_only, remote: true, multipart: true, authenticity_token: true) do |f|
+  = simple_form_for(@lead, html: one_submit_only, remote: false, multipart: true, authenticity_token: true) do |f|
     = link_to_close edit_lead_path(@lead)
     = f.hidden_field :user_id
 
@@ -9,7 +9,7 @@
     = render "fields/edit_custom_field_group", f: f, edit: true
     = render "leads/status",         f: f, edit: true
     = render "leads/documents",      f: f, edit: true
-    = render "leads/contact",        f: f, edit: true
+    = render "leads/contacts",       f: f, edit: true
     = render "leads/web",            f: f, edit: true
     = render "fields/groups",        f: f, edit: true
     = render "entities/permissions", f: f, edit: true, entity: @lead
