--- a/app/views/leads/_new.html.haml
+++ b/app/views/leads/_new.html.haml
@@ -8,7 +8,7 @@
   = render "leads/top_section",    f: f
   = render "fields/edit_custom_field_group", f: f
   = render "leads/status",         f: f
-  = render "leads/contact",        f: f
+  = render "leads/contacts",        f: f
   = render "shared/add_comment",   f: f
   = render "leads/web",            f: f
   = render "fields/groups",        f: f
