--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -513,7 +513,8 @@ $bg_color9: #FFDD4A;
 // Sidebar, filters
 //------------------------------------------------------------------------------
 .filters, .panel {
-  background: snow;
+  background: rgb(255, 255, 255);
+  box-shadow: 2px 2px 10.8px rgba(0, 0, 0, 0.25);
   margin: 0px 0px 12px 0px;
   padding: 6px 8px 6px 8px;
   -moz-border-radius: 4px;
@@ -553,7 +554,7 @@ $bg_color9: #FFDD4A;
     &.last {
       border-bottom: none; } }
   &#recently {
-    background: floralwhite; }
+    background: rgb(255, 255, 255); }
   &#summary {
     p {
       margin: 4px 0px 4px 0px; } } }
