--- a/app/views/home/_activity.html.haml
+++ b/app/views/home/_activity.html.haml
@@ -21,7 +21,8 @@
       - if known_event
         - action = t('action_' + activity.event)
         - type = t('subject_' + activity.item_type.downcase)
-        = link_to avatar_for(activity.user, size: :thumb), user_path(activity.user)
+        %div
+          = link_to avatar_for(activity.user, size: :thumb), user_path(activity.user)
         = t("activity_text", user: h(user), action: h(action), type: h(type), subject: h(subject), default: "#{h user} #{h action} #{h type} #{h subject}").html_safe # locales optionally can change the word order for activities using 'activity_text'
         - if ((item = activity.item).class == Comment) and Setting.comments_visible_on_dashboard
           = t('action_create_comment', comment: truncate(h(item.comment), length: 90)).html_safe
