--- a/app/views/leads/_new.html.haml
+++ b/app/views/leads/_new.html.haml
@@ -1,5 +1,5 @@
 = simple_form_for(@lead, html: one_submit_only, remote: true) do |f|
-  = link_to_close new_lead_path
+  = link_to_close(new_lead_path, 'closePopUp')
   = f.hidden_field :user_id
   = hidden_field_tag "campaign", "#{@campaign.id if @campaign}"
 
@@ -21,5 +21,19 @@
     - else
       = f.submit t(:create_lead), class: 'btn btn-primary'
     #{t :or}
-    %div#closePopUp
-      = link_to_cancel new_lead_path
+    = link_to_cancel new_lead_path
+:javascript
+  console.log("here from new file")
+  var closePopUpButton = document.getElementById('closePopUp');
+  console.log(closePopUpButton,"closePopUpButton")
+
+  if (closePopUpButton) {
+    closePopUpButton.addEventListener('click', function() {
+      var popupContainer = document.getElementById('popupContainer');
+      if (popupContainer) {
+        popupContainer.classList.remove('show');
+        console.log("Popup closed");
+      }
+    });
+  }
+
